<resources>
    <string name="conversation_message_text">Message</string>
    <string name="conversation_send_button">Send</string>
    <string name="welcome_message">Welcome</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Nemesis</string>
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Weather Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_old_password">Enter Old Password</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="hint_username_change">Enter Username</string>
    <string name="hint_password">Password</string>
    <string name="current_location_weather">Current Location Weather:</string>

    <string name="button_login_login">Login</string>

    <string name="button_login_register">register</string>
    <string name="button_login_forgot">Forgot Password</string>
    <string name="button_update_password">Update Password</string>
    <string name="button_send_code">Send Code</string>
    <string name="button_send_email">Send Email</string>
    <string name="button_confirm_code">Confirm Code</string>
    <string name="button_return_to_login">Return to Login</string>
    <string name="button_verification_login">Back to Login</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_change_theme">Change Theme</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_change_forgotten_password">Change Password</string>
    <string name="button_confirm_delete">Delete Account</string>
    <string name="button_forgot_password">Forgot Password</string>
    <string name="text_success_email">EMAIL:</string>
    <string name="text_success_useremail">EMAIL NOT PASSED</string>
    <string name="text_success_jwt">JWT:</string>
    <string name="text_verification_message">Thank you for registering! An email has been sent to the email address provided.
    Please check your email and follow the link provided!</string>
    <string name="text_forgotten_password_message">Enter your email below that you register with then
    use the information provide to recover your account</string>
    <string name="text_enter_your_code_received">Enter the code sent</string>


    <string name="hint_forgotten_email">Enter Your Email</string>
    <string name="hint_text_forgotten_code">Code sent to you</string>
    <string name="text_success_userjwt">JWT NOT PASSED</string>
    <string name="hint_retype">Retype Password</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_connections">Connections</string>
    <string name="title_weather">Weather</string>
    <string name="title_map">Mark Location</string>
    <string name="title_delete">Delete Account</string>
    <string name="title_change_password_settings">Change Password</string>
    <string name="title_change_theme">Change Theme</string>
    <string name="action_signin">Sign In</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_settings">Settings</string>
    <string name="action_link">Full Post</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change_theme">Change Theme</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_default_color">Default Color</string>
    <string name="action_teal_theme">Teal Theme</string>
    <string name="action_pink_theme">Pink Theme</string>
    <string name="Contacts">Contacts</string>
    <string name="ADD_Contacts"> ADD Contacts</string>
    <string name="Remove_Contacts">Remove Contacts</string>
    <string name="Edit_Contacts">Edit Contacts</string>
    <string name="View_Contacts">View Contacts</string>
    <string name="base_url">https://team1-database.herokuapp.com/</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="City_Name">City Name</string>
    <string name="Zip_Code">Zip Code</string>
    <string name="Zip_Code_Tag">Search with a zip code…</string>
    <string name="Google_Map_Search">Select a location via Google Maps…</string>
    <string name="Five_Day_Title">5-Day Forecast</string>
    <string name="Hourly_Title">Hourly Forecast</string>
    <string name="Search">Search</string>

    <string name="Search_Contacts">Search Contacts</string>
    <string name="see_more">See More</string>
    <string name="member_info">Member Info.</string>
    <string name="button_delete_contact">Delete Contact</string>
    <string name="button_add_contact">Add Contact</string>
    <string name="title_activity_map">Map</string>
    <string name="Temperature_Value_Home">Current Temperature:</string>

    <string name="hint_add_contact">Enter new contact\'s email</string>
    <string name="title_delete_contact">Delete Contact</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="button_add_chat">Add Chat</string>
    <string name="hint_add_chat">Enter new chat members\'s email</string>
    <string name="hint_add_chatname">Enter new name for this chat</string>
    <string name="button_add_to_chat">Add New Member To Chat</string>
    <string name="title_add_chat">Add Chat</string>
    <string name="title_add_user_to_chat">Add User to Chat</string>
    <string name="title_chat_list">ChatList</string>
    <string name="button_chat_contact">Create New Chat</string>
</resources>
